    package domain;

    public enum AllocationMode {
        STRICT,
        PARTIAL
    }
