package domain;

public enum LineStatus {
    ELIGIBLE,
    PARTIAL,
    UNDISPATCHABLE
}
